optimize alert feed