@@ -114,15 +114,21 @@ abstract class MTASchema_MNR extends MTASchema {
 
             private MNR.Alert[] getAlerts(final boolean update){
                 if(alerts == null || update){
-                    final List<MNR.Alert> alerts = new ArrayList<>();
-                    final GTFSRealtimeProto.FeedMessage feed = cast(mta).service.alerts.getMNR();
-                    final int len = feed.getEntityCount();
-                    for(int i = 0; i < len; i++){
-                        final MNR.Alert alert = MTASchema_MNR.asTransitAlert(mta, feed.getEntity(i));
-                        if(Arrays.asList(alert.getRouteIDs()).contains(route_id))
-                            alerts.add(alert);
-                    }
-                    this.alerts = alerts;
+                    final String id = String.valueOf(routeID);
+                    this.alerts = List.of(cast(mta).getAlerts(
+                        cast(mta).service.alerts.getMNR(),
+                        ent -> {
+                            final GTFSRealtimeProto.Alert alert;
+                            final int len;
+                            if(ent.hasAlert() && (len = (alert = ent.getAlert()).getInformedEntityCount()) > 0)
+                                for(int i = 0; i < len; i++)
+                                    if(alert.getInformedEntity(i).getRouteId().equals(id))
+                                        return true;
+                            return false;
+                        },
+                        ent -> asTransitAlert(mta, ent),
+                        new MNR.Alert[0]
+                    ));
                 }
                 return alerts.toArray(new MNR.Alert[0]);
             }
@@ -293,15 +299,21 @@ abstract class MTASchema_MNR extends MTASchema {
 
             private MNR.Alert[] getAlerts(final boolean update){
                 if(alerts == null || update){
-                    final List<MNR.Alert> alerts = new ArrayList<>();
-                    final GTFSRealtimeProto.FeedMessage feed = cast(mta).service.alerts.getMNR();
-                    final int len = feed.getEntityCount();
-                    for(int i = 0; i < len; i++){
-                        final MNR.Alert alert = MTASchema_MNR.asTransitAlert(mta, feed.getEntity(i));
-                        if(Arrays.asList(alert.getStopIDs()).contains(stopID))
-                            alerts.add(alert);
-                    }
-                    this.alerts = alerts;
+                    final String id = String.valueOf(stop_id);
+                    this.alerts = List.of(cast(mta).getAlerts(
+                        cast(mta).service.alerts.getMNR(),
+                        ent -> {
+                            final GTFSRealtimeProto.Alert alert;
+                            final int len;
+                            if(ent.hasAlert() && (len = (alert = ent.getAlert()).getInformedEntityCount()) > 0)
+                                for(int i = 0; i < len; i++)
+                                    if(alert.getInformedEntity(i).getStopId().equals(id))
+                                        return true;
+                            return false;
+                        },
+                        ent -> asTransitAlert(mta, ent),
+                        new MNR.Alert[0]
+                    ));
                 }
                 return alerts.toArray(new MNR.Alert[0]);
             }
